tests/snapshots/snapshots_test__bare_key_mixed_with_values.snap
---
source: tests/snapshots_test.rs
expression: "tree_allow_no_value(\"[s]\\nflag\\nkey = value\\n\")"
---
ROOT 0..21
  SECTION 0..21
    SECTION_HEADER 0..3
      L_BRACK 0..1 "["
      IDENT 1..2 "s"
      R_BRACK 2..3 "]"
    NEWLINE 3..4 "\n"
    ENTRY 4..9
      KEY 4..8
        IDENT 4..8 "flag"
      VALUE 8..8
      NEWLINE 8..9 "\n"
    ENTRY 9..21
      KEY 9..12
        IDENT 9..12 "key"
      WHITESPACE 12..13 " "
      EQ 13..14 "="
      WHITESPACE 14..15 " "
      VALUE 15..20
        VALUE_TEXT 15..20 "value"
      NEWLINE 20..21 "\n"
