tests/snapshots/snapshots_test__malformed_empty_section_name.snap
---
source: tests/snapshots_test.rs
expression: "tree(\"[]\\nk=v\\n\")"
---
ROOT 0..7
  SECTION 0..7
    SECTION_HEADER 0..2
      L_BRACK 0..1 "["
      R_BRACK 1..2 "]"
    NEWLINE 2..3 "\n"
    ENTRY 3..7
      KEY 3..4
        IDENT 3..4 "k"
      EQ 4..5 "="
      VALUE 5..6
        VALUE_TEXT 5..6 "v"
      NEWLINE 6..7 "\n"
