tests/snapshots/snapshots_test__malformed_unclosed_section.snap
---
source: tests/snapshots_test.rs
expression: "tree(\"[unclosed\\nk=v\\n\")"
---
ROOT 0..14
  SECTION 0..14
    SECTION_HEADER 0..10
      L_BRACK 0..1 "["
      IDENT 1..9 "unclosed"
      NEWLINE 9..10 "\n"
    ENTRY 10..14
      KEY 10..11
        IDENT 10..11 "k"
      EQ 11..12 "="
      VALUE 12..13
        VALUE_TEXT 12..13 "v"
      NEWLINE 13..14 "\n"
