tests/snapshots/snapshots_test__many_sections_some_empty.snap
---
source: tests/snapshots_test.rs
expression: "tree(\"# comment\\n[a section title]\\nfoo = bar\\n[section 2]\\nfoo = bar\\n[section 3 which is empty]\\n[section4]\\nfoo = bar\\n\")"
---
ROOT 0..108
  COMMENT 0..9 "# comment"
  NEWLINE 9..10 "\n"
  SECTION 10..38
    SECTION_HEADER 10..27
      L_BRACK 10..11 "["
      IDENT 11..26 "a section title"
      R_BRACK 26..27 "]"
    NEWLINE 27..28 "\n"
    ENTRY 28..38
      KEY 28..31
        IDENT 28..31 "foo"
      WHITESPACE 31..32 " "
      EQ 32..33 "="
      WHITESPACE 33..34 " "
      VALUE 34..37
        VALUE_TEXT 34..37 "bar"
      NEWLINE 37..38 "\n"
  SECTION 38..60
    SECTION_HEADER 38..49
      L_BRACK 38..39 "["
      IDENT 39..48 "section 2"
      R_BRACK 48..49 "]"
    NEWLINE 49..50 "\n"
    ENTRY 50..60
      KEY 50..53
        IDENT 50..53 "foo"
      WHITESPACE 53..54 " "
      EQ 54..55 "="
      WHITESPACE 55..56 " "
      VALUE 56..59
        VALUE_TEXT 56..59 "bar"
      NEWLINE 59..60 "\n"
  SECTION 60..87
    SECTION_HEADER 60..86
      L_BRACK 60..61 "["
      IDENT 61..85 "section 3 which is empty"
      R_BRACK 85..86 "]"
    NEWLINE 86..87 "\n"
  SECTION 87..108
    SECTION_HEADER 87..97
      L_BRACK 87..88 "["
      IDENT 88..96 "section4"
      R_BRACK 96..97 "]"
    NEWLINE 97..98 "\n"
    ENTRY 98..108
      KEY 98..101
        IDENT 98..101 "foo"
      WHITESPACE 101..102 " "
      EQ 102..103 "="
      WHITESPACE 103..104 " "
      VALUE 104..107
        VALUE_TEXT 104..107 "bar"
      NEWLINE 107..108 "\n"
