tests/snapshots/snapshots_test__not_a_comment_in_value.snap
---
source: tests/snapshots_test.rs
expression: "tree(\"[foo]\\nbar = baz # not-a-comment\\nzim = -1>3 ; not-a-comment\\n\")"
---
ROOT 0..59
  SECTION 0..59
    SECTION_HEADER 0..5
      L_BRACK 0..1 "["
      IDENT 1..4 "foo"
      R_BRACK 4..5 "]"
    NEWLINE 5..6 "\n"
    ENTRY 6..32
      KEY 6..9
        IDENT 6..9 "bar"
      WHITESPACE 9..10 " "
      EQ 10..11 "="
      WHITESPACE 11..12 " "
      VALUE 12..31
        VALUE_TEXT 12..31 "baz # not-a-comment"
      NEWLINE 31..32 "\n"
    ENTRY 32..59
      KEY 32..35
        IDENT 32..35 "zim"
      WHITESPACE 35..36 " "
      EQ 36..37 "="
      WHITESPACE 37..38 " "
      VALUE 38..58
        VALUE_TEXT 38..58 "-1>3 ; not-a-comment"
      NEWLINE 58..59 "\n"
